src/objects/TRAK_Planning_Poker_Session_Content__c.object
<CustomObject>
    <description>Business Description: This object is used as part of the user story estimation process

Used In: Release Tracker App</description>
    <fields>
        <fullName>Planning_Poker_Session__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Planning Poker Session</label>
        <referenceTo>TRAK_Planning_Poker_Session__c</referenceTo>
        <relationshipLabel>Planning Poker Session Contents</relationshipLabel>
        <relationshipName>TRAK_Planning_Poker_Session_Contents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>System_Is_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System_Is_Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Story_Points__c</fullName>
        <description>Total Estimated Story Points</description>
        <formula>User_Story__r.Story_Points_Total__c</formula>
        <label>Total Story Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <label>Unique Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>User_Story_Title__c</fullName>
        <formula>&apos;As a &apos; &amp; User_Story__r.As_A_text__c &amp; &apos; I want to &apos; &amp; User_Story__r.I_Want_To__c &amp; &apos; so that &apos; &amp;  User_Story__r.So_that__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Story Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <label>User Story</label>
        <referenceTo>TRAK_User_Story__c</referenceTo>
        <relationshipLabel>Planning Poker Session Contents</relationshipLabel>
        <relationshipName>TRAK_Planning_Poker_Session_Contents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Planning Poker Session Content</label>
    <nameField>
        <displayFormat>Content-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Planning Poker Session Contents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>